add: header implementation

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,3 +3,8 @@
 @use 'variables';
 @use 'utils';
 @use 'globals';
+@use './blocks/icon';
+@use './blocks/logo';
+@use './blocks/btn';
+@use './blocks/burger-btn';
+@use './blocks/header'
