--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,6 +15,9 @@
   --color-accent: #ffd11a;
   --color-red: #ff5500;
 
+  --border: #{rem(1)} solid var(--color-dark-15);
+  --border-light: #{rem(1)} solid var(--color-dark-20);
+
   --font-family-base: 'Inter', sans-serif;
   --font-family-accent: 'Kumbh Sans', sans-serif;
 
