--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,4 +7,7 @@
 @use './blocks/logo';
 @use './blocks/btn';
 @use './blocks/burger-btn';
-@use './blocks/header'
+@use './blocks/header';
+@use './blocks/badge';
+@use './blocks/soc1als';
+@use './blocks/footer';
