add: hero section implemetation

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,3 +11,12 @@
 @use './blocks/badge';
 @use './blocks/soc1als';
 @use './blocks/footer';
+@use './blocks/metrics';
+@use './blocks/resources-preview';
+@use './blocks/team';
+@use './blocks/advantages-card';
+@use './blocks/hero';
+
+// .header, .footer {
+//   display: none;
+// }
