--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -19,6 +19,7 @@
   margin: 0;
   min-width: 360px;
   min-height: 100%;
+  line-height: 1.5;
   letter-spacing: -0.03em;
   color: var(--color-gray-50);
   background-color: var(--color-dark);
@@ -71,6 +72,7 @@ a {
 }
 
 .title {
+  margin: 0;
   font-weight: 500;
   color: var(--color-light);
 }
