--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -3,7 +3,23 @@
 .section {
   &__header {
     background-color: var(--color-dark-10);
-    padding-block: fluid(120,40);
+    padding-block: fluid(120, 40);
+
+    &-inner {
+      &:has(.section__link) {
+        display: grid;
+        column-gap: 1rem;
+        align-items: center;
+
+        @include mobile-above {
+          grid-template-columns: 1fr auto;
+        }
+
+        @include mobile {
+          row-gap: rem(30);
+        }
+      }
+    }
 
     &-info {
       display: grid;
@@ -17,8 +33,8 @@
   }
 
   &__title {
-    @include fluid-text(58,28);
-    
+    @include fluid-text(58, 28);
+
     line-height: 130%;
   }
 
