--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,7 +23,11 @@
 @use './blocks/list';
 @use './blocks/tile';
 @use './blocks/card';
+@use './blocks/tabs';
+@use './blocks/person-card';
+@use './blocks/blog-actions';
+@use './blocks/blog-card';
 
-// .header, .footer, main > *:not(:last-child) {
-//   display: none;
-// }
+.header, .footer, main > *:not(:last-child) {
+  display: none;
+}
