--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,6 +27,7 @@
 @use './blocks/person-card';
 @use './blocks/blog-actions';
 @use './blocks/blog-card';
+@use './blocks/download-info';
 
 //.header, .footer, main > *:not(:last-child) {
 //  display: none;
