--- a/styles/blocks/_icon.scss
+++ b/styles/blocks/_icon.scss
@@ -26,4 +26,10 @@
       background-image: url('../../icons/arrow-top-right.svg');
     }
   }
+
+  &--eye-yellow {
+    &::after {
+      background-image: url('../../icons/eye-yellow.svg');
+    }
+  }
 }
