--- a/styles/helpers/_mixins.scss
+++ b/styles/helpers/_mixins.scss
@@ -2,7 +2,7 @@
 @use "sass:math";
 
 @mixin fluid-text($max: 48, $min: 16) {
-  font-size: fluid($max,$min);
+  font-size: fluid($max, $min);
 }
 
 @mixin hide {
@@ -19,7 +19,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 @mixin abs-x {
@@ -50,4 +50,18 @@
   clip-path: inset(100%) !important;
   clip: rect(0 0 0 0) !important;
   overflow: hidden !important;
+}
+
+@mixin full-vw-centered-line($property: top) {
+  position: relative;
+
+  &::before {
+    @include abs-x;
+
+    content: '';
+    #{$property}: 0;
+    width: 100vw;
+    height: rem(1);
+    background-color: var(--color-dark-15);
+  }
 }
