--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,6 +28,9 @@
 @use './blocks/blog-actions';
 @use './blocks/blog-card';
 @use './blocks/download-info';
+@use './blocks/bordered-grid';
+@use './blocks/rating-view';
+@use './blocks/review-card';
 
 //.header, .footer, main > *:not(:last-child) {
 //  display: none;
