--- a/styles/blocks/_about-card.scss
+++ b/styles/blocks/_about-card.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-content: start;
   row-gap: fluid(20, 10);
 
   &__title {
