fix: box-sizing for all elements

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,5 +1,11 @@
 @use 'helpers' as *;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .page {
   height: 100%;
   font-family: var(--font-family-base);
