--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,8 +37,10 @@
 @use './blocks/summary';
 @use './blocks/news-card';
 @use './blocks/news';
+@use './blocks/video-player';
+@use './blocks/video-card';
 
 
-.header, .footer, main > *:not(:last-child) {
-  display: none;
-}
+//.header, .footer, main > *:not(:last-child) {
+//  display: none;
+//}
