--- a/styles/blocks/_icon.scss
+++ b/styles/blocks/_icon.scss
@@ -32,4 +32,10 @@
       background-image: url('../../icons/eye-yellow.svg');
     }
   }
+
+  &--arrow-down-gray {
+    &::after {
+      background-image: url('../../icons/arrow-down-gray.svg');
+    }
+  }
 }
