--- a/styles/blocks/_news.scss
+++ b/styles/blocks/_news.scss
@@ -1,7 +1,26 @@
 @use '../helpers' as *;
 
 .news {
+  display: grid;
   padding-block: fluid(80, 40);
+  row-gap: rem(60);
+
+  @include laptop {
+    row-gap: rem(40);
+  }
+
+  &__header {
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__title {
+    @include fluid-text(28, 20);
+
+    color: #CCC;
+  }
 
   &__list {
     display: grid;
