--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'globals';
 
 // Blocks
+@use './blocks/expandable-content';
 @use './blocks/icon';
 @use './blocks/logo';
 @use './blocks/btn';
@@ -39,6 +40,8 @@
 @use './blocks/news';
 @use './blocks/video-player';
 @use './blocks/video-card';
+@use './blocks/table-of-contents';
+@use './blocks/blog-details';
 
 
 //.header, .footer, main > *:not(:last-child) {
