add: new podcasts page with all her sections

--- a/styles/blocks/_rating-view.scss
+++ b/styles/blocks/_rating-view.scss
@@ -3,6 +3,7 @@
 .rating-view {
   display: inline-flex;
   column-gap: rem(7);
+  align-items: center;
   border: var(--border);
   border-radius: rem(100);
   padding: rem(10) rem(16);
