--- a/styles/blocks/_video-player.scss
+++ b/styles/blocks/_video-player.scss
@@ -12,6 +12,10 @@
     @include laptop {
       border-radius: rem(10);
     }
+
+    &--small {
+      height: fluid(290, 208);
+    }
   }
 
   &__panel {
@@ -24,6 +28,10 @@
     padding: rem(30);
     transition-duration: var(--transition-duration);
 
+    &--centered {
+      align-items: center;
+      justify-content: center;
+    }
 
     &:not(.is-active) {
       @include hide;
