--- a/styles/blocks/_bordered-grid.scss
+++ b/styles/blocks/_bordered-grid.scss
@@ -52,6 +52,8 @@
     --columns: 3;
     --itemPaddingX: #{rem(50)};
 
+    column-gap: calc(var(--itemPaddingX) * 2);
+
     @include laptop {
       --itemPaddingX: #{rem(40)};
     }
@@ -63,8 +65,17 @@
         */
         &:nth-child(3n - 2),
         &:nth-child(3n - 1) {
-          border-right: var(--border);
-          padding-right: var(--itemPaddingX);
+          position: relative;
+
+          &::after {
+            content: '';
+            position: absolute;
+            left: calc(100% + var(--itemPaddingX));
+            top: 0;
+            width: rem(1);
+            height: 100%;
+            background-color: var(--color-dark-15);
+          }
         }
 
         /*
@@ -81,14 +92,6 @@
           &::before {
             height: 0;
           }
-        }
-
-        /*
-          2-ой и 3-ий элементы в колонке
-        */
-        &:nth-child(3n - 1),
-        &:nth-child(3n) {
-          padding-left: var(--itemPaddingX);
         }
       }
     }
