--- a/styles/blocks/_card.scss
+++ b/styles/blocks/_card.scss
@@ -35,10 +35,6 @@
       display: grid;
       row-gap: fluid(50, 20);
 
-      @include tablet-above {
-        max-width: rem(509);
-      }
-
       @include tablet {
         justify-content: start;
       }
@@ -51,6 +47,13 @@
     &-info {
       display: grid;
       row-gap: fluid(16, 6);
+
+      &:has(.card__rating) {
+        display: flex;
+        column-gap: 1rem;
+        align-items: center;
+        justify-content: space-between;
+      }
     }
 
     &-title {
@@ -59,6 +62,12 @@
 
     &-description {
       color: var(--color-gray-60);
+    }
+
+    &-link {
+      @include tablet {
+        max-width: rem(358);
+      }
     }
   }
 
@@ -105,6 +114,18 @@
         }
       }
     }
+
+    &--3-cols {
+      gap: fluid(50, 20) rem(20);
+
+      @include laptop {
+        column-gap: rem(16);
+      }
+
+      @include mobile-above {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
   }
 
   &__cell {
@@ -123,6 +144,12 @@
 
     &-title {
       @include fluid-text(24, 18);
+
+      &--small {
+        @include fluid-text(18, 14);
+
+        font-weight: 500;
+      }
     }
 
     &-subtitle {
@@ -149,12 +176,16 @@
 
     &:has(&-link) {
       display: grid;
-      column-gap: rem(20);
       align-items: center;
       grid-template-areas:
         'other link'
         'other link';
       grid-template-columns: 1fr auto;
+      gap: rem(4) rem(20);
+
+      @include laptop {
+        row-gap: rem(2);
+      }
     }
   }
 }
