--- a/styles/blocks/_summary.scss
+++ b/styles/blocks/_summary.scss
@@ -42,5 +42,11 @@
   &__value {
     margin: 0;
     color: var(--color-light);
+
+    &--large {
+      @include fluid-text(20, 16);
+
+      font-weight: 500;
+    }
   }
 }
