--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -6,7 +6,7 @@
     padding-block: fluid(120, 40);
 
     &-inner {
-      &:has(.section__link) {
+      &:has(.section__actions) {
         display: grid;
         column-gap: 1rem;
         align-items: center;
@@ -39,6 +39,10 @@
 
   &__body {
     border-block: var(--border);
+  }
+
+  &__actions, &__link {
+    width: 100%;
   }
 
   &__link {
