--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,6 +42,7 @@
 @use './blocks/video-card';
 @use './blocks/table-of-contents';
 @use './blocks/blog-details';
+@use './blocks/report-card';
 
 
 //.header, .footer, main > *:not(:last-child) {
