--- a/styles/blocks/_bordered-grid.scss
+++ b/styles/blocks/_bordered-grid.scss
@@ -38,14 +38,6 @@
         }
       }
     }
-
-    @include mobile {
-      --columns: 1;
-
-      .bordered-grid__item:not(:last-child) {
-        border-bottom: var(--border);
-      }
-    }
   }
 
   &--3-cols {
@@ -97,6 +89,55 @@
     }
 
     @include tablet {
+      --columns: 1;
+
+      .bordered-grid__item:not(:last-child) {
+        border-bottom: var(--border);
+      }
+    }
+  }
+
+  &--4-cols {
+    --columns: 4;
+    --itemPaddingX: #{rem(50)};
+
+    column-gap: calc(var(--itemPaddingX) * 2);
+
+    @include laptop {
+      --itemPaddingX: #{rem(30)};
+    }
+
+    @include tablet-above {
+      .bordered-grid__item {
+        /*
+          Элементы в 1-ой, 2-ой, 3-ей колонке
+        */
+        &:nth-child(4n - 3),
+        &:nth-child(4n - 2),
+        &:nth-child(4n - 1) {
+          position: relative;
+
+          &::after {
+            content: '';
+            position: absolute;
+            left: calc(100% + var(--itemPaddingX));
+            top: 0;
+            width: rem(1);
+            height: 100%;
+            background-color: var(--color-dark-15);
+          }
+        }
+      }
+    }
+
+    @include tablet {
+      --columns: 2;
+    }
+  }
+
+  &--2-cols,
+  &--4-cols {
+    @include mobile {
       --columns: 1;
 
       .bordered-grid__item:not(:last-child) {
