--- a/styles/blocks/_btn.scss
+++ b/styles/blocks/_btn.scss
@@ -7,6 +7,7 @@
   border: var(--border);
   border-radius: rem(12);
   padding: rem(18) rem(24);
+  min-width: rem(137);
   font-size: rem(18);
   white-space: nowrap;
   color: var(--color-gray-60);
@@ -16,6 +17,7 @@
   @include laptop {
     border-radius: rem(8);
     padding: rem(14) rem(20);
+    min-width: rem(103);
     font-size: rem(14);
   }
 
