fix: invalid styles for checkbox & field, header promo size

--- a/styles/blocks/_checkbox.scss
+++ b/styles/blocks/_checkbox.scss
@@ -50,5 +50,9 @@
       color: var(--color-light);
       transition-duration: var(--transition-duration);
     }
+
+    &:user-invalid {
+      border-color: var(--color-red);
+    }
   }
 }
