--- a/styles/blocks/_field.scss
+++ b/styles/blocks/_field.scss
@@ -48,6 +48,10 @@
     &::placeholder {
       color: var(--color-dark-40);
     }
+
+    &:user-invalid {
+      border-color: var(--color-red);
+    }
   }
 
   &__body {
