--- a/styles/blocks/_metrics.scss
+++ b/styles/blocks/_metrics.scss
@@ -49,6 +49,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-start;
+    justify-content: start;
     padding: rem(50);
     row-gap: rem(10);
 
